--- a/pages/itemList.hbs
+++ b/pages/itemList.hbs
@@ -1,4 +1,4 @@
-<main class='main'>
+{{! <main class='main'>
   <ul class='shop-list'>
     <li class='shop-item'>
       <div class='image-box'>
@@ -96,5 +96,21 @@
         <span>$0.99</span>
       </section>
     </li>
+  </ul>
+</main> }}
+
+<main class="main">
+  <ul class="shop-list">
+    {{#.}}
+    <li class='shop-item'>
+      <div class='image-box'>
+        <img src='{{img}}' alt='' />
+      </div>
+      <section class='cost-detail'>
+        <h3>{{title}}</h3>
+        <span>{{price}}</span>
+      </section>
+    </li>
+    {{/.}}
   </ul>
 </main>
