feat: Insert information into database & Connected to server and database
- next work -

서버 데이터 프론트와 연결(비동기 로직)
새로 고침 후 uri에 맞는 라우터 연결

--- a/pages/mainView.hbs
+++ b/pages/mainView.hbs
@@ -1,7 +1,7 @@
 <main class='main'>
   <section class='carousel-list'>
     <div class='carousel-item'>
-      <img src='./src/images/main-screen.png' alt='main ima' />
+      <img src='main-screen.png' alt='main ima' />
     </div>
     <button class='prev-btn'>
       <i class='fas fa-chevron-left'></i>
@@ -34,7 +34,7 @@
     <ul class='best-product-list'>
       <li class='best-product-item'>
         <a href='#'>
-          <img src='./src/images/shoes1.png' alt='' />
+          <img src='shoes1.png' alt='' />
           <div>
             <div>Brown Chelsea Boots</div>
             <div>from $21.95</div>
@@ -43,7 +43,7 @@
       </li>
       <li class='best-product-item'>
         <a href='#'>
-          <img src='./src/images/shoes2.png' alt='' />
+          <img src='shoes2.png' alt='' />
           <div>
             <div>Formal Loafers</div>
             <div>from $23.9</div>
@@ -52,7 +52,7 @@
       </li>
       <li class='best-product-item'>
         <a href='#'>
-          <img src='./src/images/shoes5.png' alt='' />
+          <img src='shoes5.png' alt='' />
           <div>
             <div>Ugly Shoes</div>
             <div>from $18.5</div>
