feat: connected the front and the back & make lookbook view
- next work -

lookbook view styling
Refresh Error

--- a/pages/itemList.hbs
+++ b/pages/itemList.hbs
@@ -99,12 +99,12 @@
   </ul>
 </main> }}
 
-<main class="main">
+
   <ul class="shop-list">
     {{#.}}
     <li class='shop-item'>
       <div class='image-box'>
-        <img src='{{img}}' alt='' />
+        <img src='{{image}}' alt='' />
       </div>
       <section class='cost-detail'>
         <h3>{{title}}</h3>
@@ -113,4 +113,3 @@
     </li>
     {{/.}}
   </ul>
-</main>
